--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install-all": "npm install --prefix backend && npm install --prefix my-video",
-    "start": "node backend/index.js",
+    "install-all": "npm install --prefix server && npm install --prefix my-video",
+    "start": "node server/index.js",
     "postinstall": "npm run install-all"
   }
 }
