--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@remotion/cli": "^4.0.306",
     "@remotion/renderer": "^4.0.306",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "remotion": "^4.0.306"
   }
 }
